--- a/TASK/01Task.html
+++ b/TASK/01Task.html
@@ -103,7 +103,7 @@
             <input type="checkbox" name="edu" id="edu">
             <label for="edu">Doctorate degree</label><br>
 
-
+<li> <s</strong></li>
 
 
 
