--- a/TASK/03Task.html
+++ b/TASK/03Task.html
@@ -69,22 +69,71 @@
             </ul>
             <ul class="nnn2">
                 <li class="ccc">Nashville</li><br><br>
-                <li class="ccc">New Orl</li><br><br>
+                <li class="ccc">New Orleans</li><br><br>
+                <li class="ccc">Oklahoma City</li><br><br>
+                <li class="ccc">Omaha</li><br><br>
+                <li class="ccc">Orlando</li><br><br>
+                <li class="ccc">Plam Bay</li><br><br>
+            </ul>
+            <ul class="nnn1">
+                <li class="ccc">providence</li><br><br>
+                <li class="ccc">Queens</li><br><br>
+                <li class="ccc">San Antonio</li><br><br>
+                <li class="ccc">Stony Brook</li><br><br>
+                <li class="ccc">Tucson</li><br><br>
+                <li class="ccc">West Hollywood</li><br><br>
+            </ul>
+
+        </div>
+        <h1>Countries With uber Eats</h1>
+        <a href="" class="iii"> View all Countries</a>
+
+        <div class="eee">
+            <ul class="nnn">
+                <li class="ccc">Akron</li><br><br>
+                <li class="ccc">Albuquerque</li><br><br>
                 <li class="ccc">Bridgeport</li><br><br>
                 <li class="ccc">Concord</li><br><br>
                 <li class="ccc">Dayton</li><br><br>
                 <li class="ccc">El Paso</li><br><br>
             </ul>
             <ul class="nnn1">
-                <li class="ccc">Akron</li><br><br>
-                <li class="ccc">Albuquerque</li><br><br>
-                <li class="ccc">Albuquerque</li><br><br>
-                <li class="ccc">Bridgeport</li><br><br>
-                <li class="ccc">Concord</li><br><br>
-                <li class="ccc">Dayton</li><br><br>
-                <li class="ccc">El Paso</li><br><br>
+                <li class="ccc">hartford</li><br><br>
+                <li class="ccc">houstan</li><br><br>
+                <li class="ccc">indianapolis</li><br><br>
+                <li class="ccc">McAllen</li><br><br>
+                <li class="ccc">Mesa</li><br><br>
+                <li class="ccc">Milwaukee</li><br><br>
+            </ul>
+            <ul class="nnn2">
+                <li class="ccc">Nashville</li><br><br>
+                <li class="ccc">New Orleans</li><br><br>
+                <li class="ccc">Oklahoma City</li><br><br>
+                <li class="ccc">Omaha</li><br><br>
+                <li class="ccc">Orlando</li><br><br>
+                <li class="ccc">Plam Bay</li><br><br>
+            </ul>
+            <ul class="nnn1">
+                <li class="ccc">providence</li><br><br>
+                <li class="ccc">Queens</li><br><br>
+                <li class="ccc">San Antonio</li><br><br>
+                <li class="ccc">Stony Brook</li><br><br>
+                <li class="ccc">Tucson</li><br><br>
+                <li class="ccc">West Hollywood</li><br><br>
             </ul>
 
+        </div>
+        <div class="ooo">
+            <div><h1>uber Eats</h1></div>
+            <div> <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul></div>
+            <div></div>
         </div>
 
     </div>
