--- a/PRACTICE/10General Siblings Selector.html
+++ b/PRACTICE/10General Siblings Selector.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Siblings Selector</title>
+    <style>
+        .parent~p {
+            background-color: coral;
+            color: rgb(50, 14, 149);
+            
+        }
+    </style>
 </head>
+
 <body>
     <h1>General Siblings Selector</h1>
-    
+    <div class="parent">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</p>
 </body>
+
 </html>
