--- a/PRACTICE/22background-repeat.html
+++ b/PRACTICE/22background-repeat.html
@@ -16,13 +16,18 @@
             background-image: url(../IMAGE/backgroundimages.jpg);
             background-size: 200px;
             background-repeat: no-repeat;
+            background-repeat: repeat-x;
+            background-repeat: space;
+                /* background-repeat: repeat-y; */
+                /* background-repeat: repeat; */
+                background-repeat: round;
         }
     </style>
 </head>
 
 <body>
     <h1>background-repeat</h1>
-    <div class="background-repeat"></div>
+    <div class="background-repeat"></div><br><br><br><br>
 </body>
 
 </html>
