--- a/PRACTICE/33table.html
+++ b/PRACTICE/33table.html
@@ -11,37 +11,30 @@
             padding: 0;
             box-sizing: border-box;
         }
-
         table,
         td {
             border: 1px double purple;
         }
-
         table {
             border-collapse: collapse;
             width: 800px;
             height: 400px;
             text-align: center;
         }
-
         td {
             padding: 20px;
         }
-
         tr:nth-child(odd) {
             background-color: rgb(237, 248, 94);
             color: rgb(162, 11, 121);
         }
-
         TR:nth-child(even) {
             background-color: rgb(162, 26, 162);
             color: yellow;
         }
-
         body {
             background-color: lightblue;
         }
-
         .responsive-table {
             width: 700px;
             height: 500px;
@@ -52,9 +45,8 @@
         }
     </style>
 </head>
-
 <body>
-    <h1> Table in css</h1>
+    <h1 style="text-align: center;"> Table in css</h1>
     <div class="responsive-table">
         <table style="">
             <tr>
@@ -108,5 +100,4 @@
         </table>
     </div>
 </body>
-
 </html>
