--- a/TASK/05Netflix.html
+++ b/TASK/05Netflix.html
@@ -82,6 +82,32 @@
         <div class="main">
             <div class="footer1"><h4>Questions? Call 000-800-919-1694
             </h4></div>
+            <div class="jjj">
+                <ul>
+                    <li>FAQ</li>
+                    <li>Investor Realition</li>
+                    <li>Privacy</li>
+                    <li>Speed Test</li>
+                </ul>
+                <ul>
+                    <li>Help Center</li>
+                    <li>Jobs</li>
+                    <li>Cookie Pr</li>
+                    <li>Speed Test</li>
+                </ul>
+                <ul>
+                    <li>FAQ</li>
+                    <li>Investor Realition</li>
+                    <li>Privacy</li>
+                    <li>Speed Test</li>
+                </ul>
+                <ul>
+                    <li>FAQ</li>
+                    <li>Investor Realition</li>
+                    <li>Privacy</li>
+                    <li>Speed Test</li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
